# scene

./: .dockerignore  .env.staging.example  .gitignore  DEVELOPMENT.md  Dockerfile.playwright  Dockerfile.staging  README.md  REQUIREMENTS.md  WALKTHROUGH.md  dev.dynamodb.json  docker-compose.staging.yml  pyproject.toml  tmp_runner.py
app/: constants.py  main.py  pagination.py  schemas.py  templating.py
app/routes/: api.py  artifacts.py  config.py  operations.py  projects.py  runs.py
app/services/: agent_auth.py  artifacts.py  config_transfer.py  dispatcher.py  dynamodb_storage.py  kubernetes_runner.py  orchestrator.py  run_scope.py  storage.py  (+4 more)
docs/: agent-api.md  artifacts.md  k3s-runner.md  operations.md  quality-gate.md  staging.md  storage.md
frontend/: package-lock.json  package.json  playwright.config.ts
scene_mcp/: __init__.py  client.py  server.py
scripts/: quality_gate.py  runner_readiness.py  scene_aws_validate.rb  scene_config.py  scene_k3s_validate.rb  staging_smoke.py
tests/: test_agent_api.py  test_api_crud.py  test_api_integration_contract.py  test_config_transfer.py  test_diff_engine.py  test_dispatch_state.py  test_dispatcher.py  test_kubernetes_runner.py  test_large_views.py  test_operations.py  test_orchestrator_integration.py  test_orchestrator_unit.py  test_orchestrator_watchdog.py  test_project_config_forms.py  test_runner_artifact_transfer.py  test_runner_backend_config.py  test_runner_readiness.py  test_runs_dashboard.py  test_runtime_paths.py  test_s3_artifacts.py  test_scene_mcp.py  test_staging_config.py  test_storage_backends.py
(+99 files in other folders)
