[project]
name = "scene"
version = "0.1.0"
description = "Visual testing orchestration dashboard with FastAPI and htmx"
authors = [{name = "Scene Dev Team"}]
readme = "REQUIREMENTS.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.3",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "boto3>=1.34.0",
    "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.6"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
[tool.pytest.ini_options]
pythonpath = ["."]
